<package>
  <name>particle_detect</name>
  <version>0.0.0</version>
  <description>The particle_detect package</description>
  <maintainer email="ohara@todo.todo">ohara</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
                                          
   <run_depend>sensor_msgs</run_depend> 
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>


  <export>

  </export>
</package>